[package]
name = "actors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.10.14"
futures = { version = "0.3.28", default-features = false, features = ["alloc", "async-await", "std"] }
tokio = { version = "1.29.1", default-features = false, features = ["sync", "parking_lot", "rt-multi-thread"] }
