[package]
name = "evergarden-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actors = { path = "../actors" }
async-broadcast = "0.5.1"
bytes = "1.4.0"
cacache = { version = "11.6.0", default-features = false, features = ["mmap", "memmap2", "tokio-runtime"] }
futures-util = "0.3.28"
http-serde = "1.1.2"
hyper = { version = "0.14.27", default-features = false }
itoa = "1.0.9"
lazy-regex = { version = "3.0.1", features = ["unicode", "regex"] }
lz4_flex = "0.11.1"
regex = "1.9.3"
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
ssri = "9.2.0"
thiserror = "1.0.44"
time = { version = "0.3.25", features = ["serde"] }
tokio = { version = "1.29.1", features = ["io-util"] }
url = { version = "2.4.0", features = ["serde"] }
uuid = { version = "1.4.1", features = ["serde"] }
