[package]
name = "evergarden-export"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = { version = "1.0.26" }
evergarden-common = { path = "../common" }
uuid = "1.4.1"
time = { version = "0.3.25", features = ["formatting"] }
http = "0.2.9"
tempfile = "3.7.1"
