[package]
name = "evergarden-export"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = { version = "1.0.26" }
evergarden-common = { path = "../common" }
uuid = "1.4.1"
time = { version = "0.3.25", features = ["formatting", "macros"] }
http = "0.2.9"
tempfile = "3.7.1"
itertools = "0.11.0"
ssri = "9.2.0"
neo-mime = { version = "0.1.1", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
sha2 = { version = "0.10.7", features = ["asm"] }
faster-hex = "0.8.0"
clap = { version = "4.3.19", features = ["derive"] }
ubyte = "0.10.3"
zip = "0.6.6"
